--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -706,7 +706,8 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/libs/jquery.js",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"js/publicProtocol.js"
 				],
 				"refer": [
 					"html/register/register_phoneNumber.html",
@@ -1255,7 +1256,9 @@
 					"css/mui.min.css",
 					"css/utils/common.css",
 					"js/utils/events.js",
-					"html/mine/privacy.html"
+					"html/mine/privacy.html",
+					"js/storageKeyName.js",
+					"js/libs/myStorage/myStorage.js"
 				],
 				"refer": [
 					"html/register/modify_password.html"
