--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -748,7 +748,8 @@
 				"refer": [
 					"html/register/register_phoneNumber.html",
 					"html/register/modify_password.html",
-					"html/index.html"
+					"html/index.html",
+					"html/index/index.html"
 				],
 				"priority": 0
 			},
@@ -1003,7 +1004,8 @@
 					"image/slide_navigation/img3.jpg",
 					"js/libs/myStorage/myStorage.js",
 					"js/utils/events.js",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [
 					"html/mine/account-info.html",
@@ -1011,7 +1013,8 @@
 					"html/mine/qun_manage.html",
 					"html/mine/qun_data.html",
 					"html/mine/setting.html",
-					"html/mine/approval-apply.html"
+					"html/mine/approval-apply.html",
+					"html/mine/apply-record.html"
 				],
 				"priority": 0
 			},
@@ -1072,7 +1075,11 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/cloud/cloud.js",
-					"js/utils/load.js"
+					"js/utils/load.js",
+					"js/qiniu/plupload.full.min.js",
+					"js/utils/QiNiuUtil.js",
+					"js/qiniu/qiniu.js",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -1264,7 +1271,8 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"image/cloud/record_add.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -1359,7 +1367,105 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/mui.indexedlist.js",
-					"js/mine/approval-apply.js"
+					"js/mine/approval-apply.js",
+					"js/utils/events.js"
+				],
+				"refer": [
+					"html/mine/add-info.html"
+				],
+				"priority": 0
+			},
+			"html/index/index.html": {
+				"resources": [
+					"css/iconfont/iconfont.css",
+					"html/quan/tab-zone.html",
+					"fonts/iconfont.ttf",
+					"js/main/slide_navigation.js",
+					"js/utils/Statusbar.js",
+					"css/utils/common.css",
+					"js/index.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/storageKeyName.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
+				],
+				"refer": [
+					"html/cloud/cloud_home.html",
+					"html/mine.html",
+					"html/tab_knowledge.html",
+					"html/clip/clip_sub.html"
+				],
+				"priority": 0
+			},
+			"html/mine/add-info.html": {
+				"resources": [
+					"image/cloud/cloud_personalimage.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/mine/apply-record.html": {
+				"resources": [
+					"css/iconfont/iconfont.css",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"css/mui.min.css",
+					"fonts/iconfont.ttf",
+					"css/utils/common.css",
+					"js/storageKeyName.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"image/utils/default_personalimage.png",
+					"css/mine/apply.css"
+				],
+				"refer": [
+					"html/mine/apply-group.html"
+				],
+				"priority": 0
+			},
+			"html/mine/apply-group.html": {
+				"resources": [
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/storageKeyName.js",
+					"js/libs/RSA/BigInt.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/mine/apply-group.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"fonts/mui.ttf",
+					"css/utils/common.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"image/utils/default_personalimage.png",
+					"css/mine/apply.css"
 				],
 				"refer": [],
 				"priority": 0
