修复同意申请时身份选择的bug

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "html/register/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+    "launch_path": "html/register/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -1145,7 +1145,11 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/signHmacSHA1.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"css/utils/common.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"js/mine/about-me.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -1411,7 +1415,8 @@
 					"html/mine.html",
 					"html/tab_knowledge.html",
 					"html/clip/clip_sub.html",
-					"html/quan/class-dynamic.html"
+					"html/quan/class-dynamic.html",
+					"html/quan/aboutme.html"
 				],
 				"priority": 0
 			},
