--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "html/register/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+    "launch_path": "html/register/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -641,7 +641,8 @@
 					"js/utils/RSAEncrypt.js",
 					"js/libs/crypto-js/crypto-js.js",
 					"image/utils/default_personalimage.png",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"js/quan/class-group.js"
 				],
 				"refer": [
 					"html/quan/group-pInfo.html"
@@ -1577,7 +1578,11 @@
 			"html/quan/group-pInfo.html": {
 				"resources": [
 					"css/quan/group-pInfo.css",
-					"image/utils/default_personalimage.png"
+					"image/utils/default_personalimage.png",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/utils/common.css"
 				],
 				"refer": [],
 				"priority": 0
