--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -432,7 +432,9 @@
 					"css/utils/common.css",
 					"js/utils/events.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/quan/leave.html"
+				],
 				"priority": 0
 			},
 			"html/quan/zonep_sub.html": {
@@ -1582,9 +1584,25 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/quan/group-pInfo.js",
+					"js/storageKeyName.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/utils/events.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/quan/zonep_sub.html",
+					"html/quan/zone_main.html"
+				],
 				"priority": 0
 			},
 			"html/mine/qun_data_create.html": {
