传值到群资料界面

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1601,7 +1601,8 @@
 				],
 				"refer": [
 					"html/quan/zonep_sub.html",
-					"html/quan/zone_main.html"
+					"html/quan/zone_main.html",
+					"html/mine/qun_data_details.html"
 				],
 				"priority": 0
 			},
