--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1716,7 +1716,8 @@
 					"html/mine/qun_data.html",
 					"html/mine/qun_manage.html",
 					"html/mine/group-info.html",
-					"html/mine/setting.html"
+					"html/mine/setting.html",
+					"html/quan/zone_main.html"
 				],
 				"priority": 0
 			},
