--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1065,7 +1065,8 @@
 					"js/utils/events.js",
 					"css/utils/common.css",
 					"js/mui.min.js",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"js/publicProtocol.js"
 				],
 				"refer": [
 					"html/index.html"
