修改动态输入框起始位置，增加与我相关回复按钮

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1213,7 +1213,8 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"html/quan/aboutme_sub.html",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"css/quan/about-me.css"
 				],
 				"refer": [],
 				"priority": 0
