--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1242,7 +1242,8 @@
 					"js/mine/about-me.js",
 					"css/quan/about-me.css",
 					"js/quan/about-me.js",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"fonts/mui.ttf"
 				],
 				"refer": [],
 				"priority": 0
