修复发布作业逻辑bug

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1572,7 +1572,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"css/home/index.css"
+					"css/home/index.css",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [
 					"html/cloud/cloud_home.html",
