--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -736,7 +736,9 @@
 					"html/homework/homework-tea.html",
 					"html/homework/homework-stu.html",
 					"html/cloud/app_keeprecord.html",
-					"html/cloud/storage_main.html"
+					"html/cloud/storage_main.html",
+					"html/cloud/storage_upload.html",
+					"html/cloud/app_notes_main.html"
 				],
 				"priority": 0
 			},
@@ -878,9 +880,12 @@
 					"js/utils/RSAEncrypt.js",
 					"js/libs/crypto-js/crypto-js.js",
 					"js/publicProtocol.js",
-					"js/homework/homework-sub.js"
+					"js/homework/homework-sub.js",
+					"css/utils/common.css"
 				],
-				"refer": [],
+				"refer": [
+					"html/homework/workdetail-tea.html"
+				],
 				"priority": 0
 			},
 			"html/homework/homework-tea.html": {
@@ -1006,7 +1011,8 @@
 					"css/mui.min.css",
 					"css/homework/workdetail.css",
 					"fonts/mui.ttf",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"image/homework/math.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -1331,7 +1337,10 @@
 					"js/qiniu/qiniu.js",
 					"css/mui.min.css",
 					"css/utils/common.css",
-					"image/cloud/cloud_add.png"
+					"image/cloud/cloud_add.png",
+					"css/iconfont/iconfont.css",
+					"js/publicProtocol.js",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -1871,6 +1880,55 @@
 					"css/mui.min.css",
 					"css/utils/common.css",
 					"js/utils/events.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/cloud/storage_upload.html": {
+				"resources": [
+					"js/mui.min.js",
+					"image/cloud/A_folder.png",
+					"css/mui.min.css",
+					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/cloud/app_notes_sub.html": {
+				"resources": [
+					"image/cloud/notes_bg2.jpg",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/quan/studentdynamic.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/cloud/app_notes_main.html": {
+				"resources": [
+					"html/cloud/app_notes_sub.html",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/homework/workdetail-tea.html": {
+				"resources": [
+					"html/homework/workdetail-tea-sub.html"
 				],
 				"refer": [],
 				"priority": 0
