--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1369,7 +1369,17 @@
 					"image/cloud/cloud_add.png",
 					"css/iconfont/iconfont.css",
 					"js/publicProtocol.js",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"js/libs/RSA/Barrett.js",
+					"css/cloud/file.css",
+					"js/libs/crypto-js/require.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/libs/myStorage/myStorage.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -1918,7 +1928,8 @@
 					"js/mui.min.js",
 					"image/cloud/A_folder.png",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"fonts/mui.ttf"
 				],
 				"refer": [
 					"html/cloud/storage_main_choose.html"
