--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1314,7 +1314,8 @@
 					"css/quan/about-me.css",
 					"js/quan/about-me.js",
 					"js/utils/events.js",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [],
 				"priority": 0
