--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1042,7 +1042,9 @@
 					"js/publicProtocol.js",
 					"js/storageKeyName.js",
 					"js/publicHomeworkProtocol.js",
-					"image/homework/english.png"
+					"image/homework/english.png",
+					"image/homework/history.png",
+					"image/homework/yuwen.png"
 				],
 				"refer": [],
 				"priority": 0
