--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -907,7 +907,8 @@
 					"js/publicProtocol.js",
 					"js/homework/homework-sub.js",
 					"css/utils/common.css",
-					"image/homework/need-submit.png"
+					"image/homework/need-submit.png",
+					"image/homework/submitted.png"
 				],
 				"refer": [
 					"html/homework/workdetail-tea.html",
@@ -1084,7 +1085,9 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"js/utils/files.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/homework/homework-commented.html"
+				],
 				"priority": 0
 			},
 			"html/homework/homework-commit.html": {
@@ -2054,7 +2057,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"css/homework/workdetail-stu.css"
+					"css/homework/workdetail-stu.css",
+					"js/utils/events.js"
 				],
 				"refer": [
 					"html/homework/doHomework-stu.html"
@@ -2072,7 +2076,9 @@
 				"resources": [
 					"js/mui.min.js",
 					"js/utils/events.js",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"js/utils/ASFiles.js",
+					"css/quan/class_space.css"
 				],
 				"refer": [],
 				"priority": 0
