--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -908,7 +908,8 @@
 					"js/homework/homework-sub.js",
 					"css/utils/common.css",
 					"image/homework/need-submit.png",
-					"image/homework/submitted.png"
+					"image/homework/submitted.png",
+					"css/homework/subjects-icon.css"
 				],
 				"refer": [
 					"html/homework/workdetail-tea.html",
@@ -2073,7 +2074,9 @@
 			},
 			"html/cloud/storage_transport.html": {
 				"resources": [
-					"js/utils/CloudFileUtil.js"
+					"js/utils/CloudFileUtil.js",
+					"js/cloud/AndroidFileSystem.js",
+					"fonts/mui.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -2084,7 +2087,8 @@
 					"js/utils/events.js",
 					"css/mui.min.css",
 					"js/utils/ASFiles.js",
-					"css/quan/class_space.css"
+					"css/quan/class_space.css",
+					"fonts/mui.ttf"
 				],
 				"refer": [],
 				"priority": 0
