--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -915,7 +915,8 @@
 					"html/homework/workdetail-tea.html",
 					"html/homework/workdetail-stu.html",
 					"html/homework/workdetailTea-temporary.html",
-					"html/homework/homework-record.html"
+					"html/homework/homework-record.html",
+					"html/homework/homework-commented.html"
 				],
 				"priority": 0
 			},
@@ -2088,7 +2089,8 @@
 					"css/mui.min.css",
 					"js/utils/ASFiles.js",
 					"css/quan/class_space.css",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"js/utils/files.js"
 				],
 				"refer": [],
 				"priority": 0
