--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2152,7 +2152,9 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"css/utils/common.css",
-					"image/homework/math.png"
+					"image/homework/math.png",
+					"image/homework/history.png",
+					"image/homework/english.png"
 				],
 				"refer": [],
 				"priority": 0
